deployment/openshift/apps/openshift/ibmi-agent-infra/agent-ui/agent-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-ui
spec:
  selector:
    app: agent-ui
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
