deployment/openshift/apps/openshift/ibmi-agent-infra/agent-ui/agent-ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: agent-ui
spec:
  to:
    kind: Service
    name: agent-ui
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
